making embedded task by detecting corners

--- a/ThirdYear/SecondTerm/Nural_Networks/Labs/lab 2/utils.ipynb
+++ b/ThirdYear/SecondTerm/Nural_Networks/Labs/lab 2/utils.ipynb
@@ -83,16 +83,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IN_DEBUG = True ## uncomment this line when you need to test your code, then re-comment it when done\n",
-    "\n",
     "if IN_DEBUG:\n",
     "    ### test your implementation\n",
     "    ######## DO NOT CHANGE THIS CODE ########\n",
     "    img = cv2.imread('images/rectangle/rec1.png')\n",
     "    thresholded_img = preprocess(img)\n",
     "    assert np.all((thresholded_img==255) | (thresholded_img==0)), \\\n",
-    "        'Preprocessing is incomplete: the resulting final image should be all 0 or 255'\n",
-    "IN_DEBUG = False"
+    "        'Preprocessing is incomplete: the resulting final image should be all 0 or 255'"
    ]
   },
   {
@@ -201,10 +198,18 @@
     "    # NOTE: This function will not work correctly unless you preprocess the image properly as indicated.\n",
     "    # contours, hierarchy = cv2.findContours(img, cv2.RETR_EXTERNAL,cv2.CHAIN_APPROX_SIMPLE)\n",
     "    contours, hierarchy = cv2.findContours(img, cv2.RETR_TREE,cv2.CHAIN_APPROX_SIMPLE)\n",
-    "    moment = cv2.moments(contours[1]) # this is how we can get the moment of certain shape\n",
+    "    print(contours)\n",
+    "    # moment = cv2.moments(contours[1]) # this is how we can get the moment of certain shape\n",
     "    # cv2.CHAIN_APPROX_NONE => stores all the boundary points.\n",
     "    # cv2.CHAIN_APPROX_SIMPLE => stores only the corner points.\n",
-    "\n",
+    "    #######\n",
+    "    ##Drawing Contours\n",
+    "    #create an empty image for contours\n",
+    "    img_contours = np.zeros(img.shape)\n",
+    "    # draw the contours on the empty image\n",
+    "    cv2.drawContours(img, contours, -1, (255,0,0), 3)\n",
+    "    cv2.imshow('contours', img)\n",
+    "    #######\n",
     "    ## the function findContours returns an array of contours and their hierarchy,\n",
     "    ## Contours is a Python list of all the contours in the image. Each individual contour is a Numpy array of (x,y) coordinates of boundary points of the object.\n",
     "    ## the list is sorted in terms of hierarchy, this means the outmost contour is in contours[0], \n",
@@ -216,8 +221,8 @@
     "    # Hint: think which contour should be passed as argument to the function (which contour we should calculate its area)\n",
     "    # Hint: the function returns a list of areas, so you should return the first element of the list.\n",
     "    area = cv2.contourArea(contours[1])\n",
-    "    areaFromMoment = moment[\"m00\"] # this is how we can get the area from the moment\n",
-    "    assert area == areaFromMoment \n",
+    "    # areaFromMoment = moment[\"m00\"] # this is how we can get the area from the moment\n",
+    "    # assert area == areaFromMoment \n",
     "    return area, contours\n"
    ]
   },
@@ -278,8 +283,8 @@
     "    x,y,w,h = cv2.boundingRect(contours[1])\n",
     "    bounding_rectangle = cv2.rectangle(img, (x, y), (x + w, y + h), (0, 255, 0), 2)\n",
     "    # # if bounding_rectangle: ## not none\n",
-    "    # cv2.imshow('Image_Rec', bounding_rectangle)\n",
-    "    # cv2.waitKey(0)\n",
+    "    cv2.imshow('Image_Rec', bounding_rectangle)\n",
+    "    cv2.waitKey(0)\n",
     "    # [6] TODO: Find the area of the bounding rectangle\n",
     "    area = w *h\n",
     "    return area, bounding_rectangle\n"
@@ -301,10 +306,10 @@
     "    (x,y) , radius = cv2.minEnclosingCircle(contours[1])\n",
     "    center = (int(x), int(y))\n",
     "    radius = int(radius)\n",
-    "    # bounding_circle = cv2.circle(img, center, radius, (0, 255, 0), 2)\n",
+    "    bounding_circle = cv2.circle(img, center, radius, (0, 255, 0), 2)\n",
     "    # # if bounding_circle: ## not none\n",
-    "    # cv2.imshow('Image_Circle', bounding_circle)\n",
-    "    # cv2.waitKey(0)\n",
+    "    cv2.imshow('Image_Circle', bounding_circle)\n",
+    "    cv2.waitKey(0)\n",
     "\n",
     "    # [8] TODO: Find the area of the bounding circle\n",
     "    area = math.pi * radius * radius\n",
@@ -350,8 +355,6 @@
     }
    ],
    "source": [
-    "IN_DEBUG = True ## uncomment this line when you need to test your code, then re-comment it when done\n",
-    "\n",
     "if IN_DEBUG:\n",
     "    ### test your implementation\n",
     "    ######## DO NOT CHANGE THIS CODE ########\n",
@@ -369,9 +372,7 @@
     "    assert round(circ_area, 2)==23235.22, \\\n",
     "        f'findBoundingCircleArea() is incorrect, expected {23235.22} found {circ_area}'\n",
     "    assert round(tri_area,2)==25933.5, \\\n",
-    "        f'findBoundingTriangleArea() is incorrect, expected {25933.5} found {tri_area}'\n",
-    "    \n",
-    "IN_DEBUG = False ## uncomment this line when you need to test your code, then re-comment it when done"
+    "        f'findBoundingTriangleArea() is incorrect, expected {25933.5} found {tri_area}'"
    ]
   },
   {
@@ -417,8 +418,6 @@
     }
    ],
    "source": [
-    "IN_DEBUG = True ## uncomment this line when you need to test your code, then re-comment it when done\n",
-    "\n",
     "if IN_DEBUG:\n",
     "    ### test your implementation\n",
     "    ######## DO NOT CHANGE THIS CODE ########\n",
@@ -426,9 +425,7 @@
     "    results = np.array(extract_features(thresholded_img, 1))\n",
     "    results = np.round(results, 2)\n",
     "    assert np.all(results == expected_features), \\\n",
-    "        f'extract_features() is incorrect'\n",
-    "    \n",
-    "IN_DEBUG = False ## uncomment this line when you need to test your code, then re-comment it when done"
+    "        f'extract_features() is incorrect'"
    ]
   },
   {
@@ -469,8 +466,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# IN_DEBUG = True ## uncomment this line when you need to test your code, then re-comment it when done\n",
-    "\n",
     "if IN_DEBUG:    \n",
     "    ### test your implementation\n",
     "    ######## DO NOT CHANGE THIS CODE ########\n",
