downloading comments coloring extensions.

--- a/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab 3 - Bayes Classifier/Lab 3 - Bayesian Classifier.ipynb
+++ b/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab 3 - Bayes Classifier/Lab 3 - Bayesian Classifier.ipynb
@@ -2307,7 +2307,7 @@
     "\n",
     "for i in range(Z.shape[0]):\n",
     "    for j in range(Z.shape[1]):\n",
-    "        # TODO [9]: Fill in the matrix Z which will represent the probability distribution of every point.\n",
+    "        #? TODO [9]: Fill in the matrix Z which will represent the probability distribution of every point.\n",
     "        # Z[i,j] represents the joint probability N(x,y) for x = i and y = j. \n",
     "        # We want to draw the gaussian probability N(x,y) for all points. \n",
     "        for k in range (numClasses):\n",
