--- a/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab 3 - Bayes Classifier/Lab 3 - Bayesian Classifier.ipynb
+++ b/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab 3 - Bayes Classifier/Lab 3 - Bayesian Classifier.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,10 +155,9 @@
     "    # then this means that we are plotting the fisrt class.\n",
     "    # the scatter function takes the x and y coordinates, which in our data are the elements in the X matrix, so \n",
     "    # on x axis we plot the first column of X, and on the y axis we plot the second column of X.\n",
-    "    # plt.scatter (X[Y[:,0]==i + 1,0], X[Y[:,0]==i + 1,1], c=colors[i], label='Class' + str(i+1))\n",
-    "    pass\n",
-    "# plt.legend()\n",
-    "# plt.show()\n",
+    "    plt.scatter (X[Y[:,0]==i + 1,0], X[Y[:,0]==i + 1,1], c=colors[i], label='Class' + str(i+1))\n",
+    "plt.legend()\n",
+    "plt.show()\n",
     "    \n"
    ]
   },
@@ -243,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 338,
    "metadata": {
     "scrolled": true
    },
@@ -367,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 340,
    "metadata": {
     "scrolled": true
    },
@@ -419,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 342,
    "metadata": {
     "scrolled": true
    },
@@ -2282,7 +2281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [
     {
@@ -2307,18 +2306,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 344,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\20115\\AppData\\Local\\Temp\\ipykernel_3240\\3043647715.py:23: MatplotlibDeprecationWarning: Calling gca() with keyword arguments was deprecated in Matplotlib 3.4. Starting two minor releases later, gca() will take no keyword arguments. The gca() function should only be used to get the current axes, or if no axes exist, create new axes with default keyword arguments. To create a new axes with non-default arguments, use plt.axes() or plt.subplot().\n",
-      "  ax = fig.gca(projection='3d')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO [9]: Generate a 3D-plot for the generated distributions. x-axis and y-axis represent the features of the data, \n",
     "#           where z-axis represent the Gaussian probability N at this point.\n",
