finishing lab3 NN

--- a/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab 3 - Bayes Classifier/Lab 3 - Bayesian Classifier.ipynb
+++ b/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab 3 - Bayes Classifier/Lab 3 - Bayesian Classifier.ipynb
@@ -2308,7 +2308,16 @@
    "cell_type": "code",
    "execution_count": 344,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\20115\\AppData\\Local\\Temp\\ipykernel_3240\\3043647715.py:23: MatplotlibDeprecationWarning: Calling gca() with keyword arguments was deprecated in Matplotlib 3.4. Starting two minor releases later, gca() will take no keyword arguments. The gca() function should only be used to get the current axes, or if no axes exist, create new axes with default keyword arguments. To create a new axes with non-default arguments, use plt.axes() or plt.subplot().\n",
+      "  ax = fig.gca(projection='3d')\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO [9]: Generate a 3D-plot for the generated distributions. x-axis and y-axis represent the features of the data, \n",
     "#           where z-axis represent the Gaussian probability N at this point.\n",
