finishing lab 6 NN

--- a/ThirdYear/SecondTerm/Nural_Networks/Labs/lab 1/Review On Python.ipynb
+++ b/ThirdYear/SecondTerm/Nural_Networks/Labs/lab 1/Review On Python.ipynb
@@ -141,20 +141,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {
     "id": "wq_GXGZfnZeM",
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n",
-      "<class 'float'>\n",
-      "<class 'bool'>\n",
-      "<class 'str'>\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\GitHub\\FacultyOfEngineeringMaterial\\ThirdYear\\SecondTerm\\Nural_Networks\\Labs\\lab 1\\Review On Python.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/GitHub/FacultyOfEngineeringMaterial/ThirdYear/SecondTerm/Nural_Networks/Labs/lab%201/Review%20On%20Python.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msklearn\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/GitHub/FacultyOfEngineeringMaterial/ThirdYear/SecondTerm/Nural_Networks/Labs/lab%201/Review%20On%20Python.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m integer_variable \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/GitHub/FacultyOfEngineeringMaterial/ThirdYear/SecondTerm/Nural_Networks/Labs/lab%201/Review%20On%20Python.ipynb#X11sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mtype\u001b[39m(integer_variable)) \u001b[39m## integer class\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
      ]
     }
    ],
