--- a/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab 4 - Density Estimation/Density Estimation.ipynb
+++ b/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab 4 - Density Estimation/Density Estimation.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,13 +307,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bump_function(point, x, h):\n",
     "    # this should be gaussian function\n",
-    "    # f = (1/(np.sqrt(2*np.pi)*h)) * np.exp(-1/2 * ((point-x)/h)**2) # 1D gaussian\n",
+    "    f = (1/(np.sqrt(2*np.pi)*h)) * np.exp(-1/2 * ((x-point)/h)**2) # 1D gaussian\n",
     "    # f = multivariate_normal_gaussian(point, x, np.identity(len(x))*h**2) # multivariate gaussian\n",
     "    \n",
     "    # TODO 4: Implement the bump function phi(x) at point p with bandwidth h. Note that x can be a scalar or a vector.\n",
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
        "       30.99619717, 31.        ])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,22 +492,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "object of type 'numpy.float64' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\GitHub\\FacultyOfEngineeringMaterial\\ThirdYear\\SecondTerm\\Nural_Networks\\Labs\\Lab 4 - Density Estimation\\Density Estimation.ipynb Cell 28\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/GitHub/FacultyOfEngineeringMaterial/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab%204%20-%20Density%20Estimation/Density%20Estimation.ipynb#X36sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m pxgivenC2 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros(\u001b[39mlen\u001b[39m(x))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/GitHub/FacultyOfEngineeringMaterial/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab%204%20-%20Density%20Estimation/Density%20Estimation.ipynb#X36sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(x)):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/GitHub/FacultyOfEngineeringMaterial/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab%204%20-%20Density%20Estimation/Density%20Estimation.ipynb#X36sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     pxgivenC1[i] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msum(bump_function(x\u001b[39m=\u001b[39;49m x[i],point\u001b[39m=\u001b[39;49m class1Data[:,\u001b[39m1\u001b[39;49m], h \u001b[39m=\u001b[39;49m h1), axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/GitHub/FacultyOfEngineeringMaterial/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab%204%20-%20Density%20Estimation/Density%20Estimation.ipynb#X36sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     pxgivenC2[i] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msum(bump_function(x\u001b[39m=\u001b[39m x[i], point\u001b[39m=\u001b[39m class2Data[:,\u001b[39m1\u001b[39m],h \u001b[39m=\u001b[39m  h2), axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n",
-      "\u001b[1;32mc:\\GitHub\\FacultyOfEngineeringMaterial\\ThirdYear\\SecondTerm\\Nural_Networks\\Labs\\Lab 4 - Density Estimation\\Density Estimation.ipynb Cell 28\u001b[0m in \u001b[0;36mbump_function\u001b[1;34m(point, x, h)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/GitHub/FacultyOfEngineeringMaterial/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab%204%20-%20Density%20Estimation/Density%20Estimation.ipynb#X36sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mbump_function\u001b[39m(point, x, h):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/GitHub/FacultyOfEngineeringMaterial/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab%204%20-%20Density%20Estimation/Density%20Estimation.ipynb#X36sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39m# this should be gaussian function\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/GitHub/FacultyOfEngineeringMaterial/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab%204%20-%20Density%20Estimation/Density%20Estimation.ipynb#X36sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39m# f = (1/(np.sqrt(2*np.pi)*h)) * np.exp(-1/2 * ((point-x)/h)**2) # 1D gaussian\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/GitHub/FacultyOfEngineeringMaterial/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab%204%20-%20Density%20Estimation/Density%20Estimation.ipynb#X36sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     f \u001b[39m=\u001b[39m multivariate_normal_gaussian(point, x, np\u001b[39m.\u001b[39midentity(\u001b[39mlen\u001b[39;49m(x))\u001b[39m*\u001b[39mh\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m) \u001b[39m# multivariate gaussian\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/GitHub/FacultyOfEngineeringMaterial/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab%204%20-%20Density%20Estimation/Density%20Estimation.ipynb#X36sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39m# TODO 4: Implement the bump function phi(x) at point p with bandwidth h. Note that x can be a scalar or a vector.\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/GitHub/FacultyOfEngineeringMaterial/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab%204%20-%20Density%20Estimation/Density%20Estimation.ipynb#X36sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39m# NOTE: Your solution should be vectorized.\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/GitHub/FacultyOfEngineeringMaterial/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab%204%20-%20Density%20Estimation/Density%20Estimation.ipynb#X36sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     f \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray(f)\n",
-      "\u001b[1;31mTypeError\u001b[0m: object of type 'numpy.float64' has no len()"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO 7: Calculate the probability density function p(x|C1) and p(x|C2) for each value on the constructed x-axis\n",
     "pxgivenC1 = np.zeros(len(x))\n",
@@ -537,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
