finishing SenderReciver Program for RSA assignment

--- a/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab 5 - Principal Component Analysis/Lab 6 - Principal Component Analysis.ipynb
+++ b/ThirdYear/SecondTerm/Nural_Networks/Labs/Lab 5 - Principal Component Analysis/Lab 6 - Principal Component Analysis.ipynb
@@ -85,8 +85,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Methods of normalization\n",
+    "1. Dividing by the maximum value\n",
+    "   -    `X_norm = X / np.max(X, axis=0)`\n",
+    "2. Mean Normalization\n",
+    "   -    `X_norm = (X - np.mean(X, axis=0)) / np.max(X, axis=0) - np.min(X, axis=0)`\n",
+    "3. Z score normalization <-  this is the one used here \n",
+    "   -    `X_norm = (X - np.mean(X, axis=0)) / np.std(X, axis=0)`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +110,7 @@
     "    sigma = np.std(X, axis=0) # the standard deviation not the covariance. \n",
     "    translation = X-mu\n",
     "    normalized_X = translation/sigma # to normalize the data, we can divide it on its standard deviation\n",
-    "    # normalized_X = translation/sk.preprocessing.normalize(translation) # this cause an error in assertion, but I don't understand why it is not correct.\n",
+    "    # normalized_X = translation/sk.preprocessing.normalize(translation) # this cause an error in assertion, but I don't understand why it is not correct, ahh because this is not the required technique here, we want to use the Z normalization :).\n",
     "    return (normalized_X, mu, sigma)\n"
    ]
   },
